--- a/main.css
+++ b/main.css
@@ -60,10 +60,7 @@ i {
 }
 
 section {
-  padding-left: 19px;
-  padding-right: 19px;
-  display: flex;
-  flex-direction: column;
+ 
 }
 
 .title {
@@ -123,4 +120,99 @@ ul {
   column-gap: 25px;
   align-items: center;
   margin-top: -15px;
+}
+
+
+.myrecentwork {
+    font-family: "roboto", sans-serif;
+font-weight: 500;
+font-size: 60px;
+line-height: 52px;
+text-align: left;
+color: rgb(148, 144, 255);
+display: flex;
+justify-content: left;
+align-items: center;
+padding-right: -60px ;
+flex-wrap: wrap;
+padding-left: 80px;
+padding-top: 35px;
+}
+
+.picture {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 50px;
+  justify-content: center;
+  align-items: center;
+  padding-left: 35px;
+  width: 335px;
+}
+
+
+.text {
+ color: rgb(255, 255, 255);
+ text-align: left;
+ padding-left: 35px;
+ display: flex;
+ align-items: left;
+ font-family: "roboto", sans-serif;
+ font-size: 50px;
+}
+
+.paragraph-text {
+text-align: left;
+padding-left: 35px;
+padding-right: 35px;
+}
+
+.styling3 {
+display: flex;
+justify-content: space-around;
+padding: 30px;
+}
+
+.button1 {
+    display: flex;
+flex-direction: row;
+align-items: center;
+padding: 12px;
+gap: 10px;
+background-color: rgb(125, 115, 252);
+border-color: rgb(125, 115, 252);
+display: flex;
+justify-content: space-around;
+width: 100px;
+margin-left: 30px;
+color: rgb(255, 255, 255);
+font-family: "roboto", sans-serif;
+
+}
+
+
+.redifining {
+    display: flex;
+    flex-flow: column;
+    padding: 2rem;
+}
+
+.lastpart {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 1rem;
+    padding-left: 19px;
+    padding-right: 19px;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.separator-text {
+    padding-left: 80px;
+}
+
+.form-center {
+    justify-content: center;
+    align-self: center;
+    column-gap: 50px;
 }
