--- a/main.css
+++ b/main.css
@@ -1,6 +1,5 @@
 .width {
   width: 100%;
-  
 }
 
 .firsttext {
@@ -31,17 +30,16 @@ nav {
   font-weight: 500;
 }
 
-
 .link {
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-    align-items: center;
-    letter-spacing: 0.03em;
-    font-family: "roboto", sans-serif;
-    font-weight: 500px;
-    font-size: 18px;
-    line-height: 16px;
-  }
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  align-items: center;
+  letter-spacing: 0.03em;
+  font-family: "roboto", sans-serif;
+  font-weight: 500px;
+  font-size: 18px;
+  line-height: 16px;
+}
 
 p {
   font-family: "roboto", sans-serif;
@@ -56,19 +54,18 @@ p {
 
 body {
   background-color: rgb(25, 23, 101);
-  
-  
-  
 }
+
 .image-picture {
-    background-image: url(top-circles.svg);
-    background-image: url(portfolio.background.shapes.mobile.svg);
-    background-size: cover;
-    height: 500px;
-    position: relative;
-    background-repeat: no-repeat;
-    padding: 50px;
+  background-image: url(top-circles.svg);
+  background-image: url(portfolio.background.shapes.mobile.svg);
+  background-size: cover;
+  height: 500px;
+  position: relative;
+  background-repeat: no-repeat;
+  padding: 50px;
 }
+
 .flex123 {
   flex-direction: column;
   flex-wrap: wrap;
@@ -95,9 +92,7 @@ i {
   display: flex;
   flex-wrap: wrap;
   padding-left: 80px;
-  
 }
-
 
 .column {
   flex-direction: column;
@@ -107,12 +102,10 @@ i {
 }
 
 .column3 {
-    
-        flex-direction: column;
-        padding-left: 80px;
-        display: flex;
-        width: 80%;
-       
+  flex-direction: column;
+  padding-left: 80px;
+  display: flex;
+  width: 80%;
 }
 
 li {
@@ -165,8 +158,8 @@ ul {
   flex-wrap: wrap;
   padding-left: 24px;
   padding-top: 35px;
- width: 327px;
- height: 104px;
+  width: 327px;
+  height: 104px;
 }
 
 .picture {
@@ -176,13 +169,11 @@ ul {
   justify-content: center;
   align-items: center;
   padding-left: 35px;
-
-height: 236px;
-width: 327px;
-left: 0px;
-top: 0px;
-border-radius: 0px;
-
+  height: 236px;
+  width: 327px;
+  left: 0;
+  top: 0;
+  border-radius: 0;
 }
 
 .text {
@@ -261,27 +252,23 @@ button:hover {
   display: grid;
   grid-template-columns: auto;
   width: 95%;
-  
 }
 
 .negro {
-    padding-left: 19px;
-    padding-right: 19px;
-    display: grid;
-    grid-template-columns: auto;
-    width: 95%;
-    margin: auto;
-    float: right;
-  }
-
-
+  padding-left: 19px;
+  padding-right: 19px;
+  display: grid;
+  grid-template-columns: auto;
+  width: 95%;
+  margin: auto;
+  float: right;
+}
 
 .separator-text {
   padding-left: 24px;
   padding-right: 24px;
   width: 450px;
   margin: 10% auto;
- 
 }
 
 .separator-text1 {
@@ -358,10 +345,7 @@ button:hover {
   grid-template-rows: auto;
   padding: 50px;
   padding-left: 24px;
-  
 }
-
-
 
 .second {
   width: 80%;
@@ -369,59 +353,46 @@ button:hover {
   grid-template-rows: auto;
 }
 
-
-
 .third {
   width: 80%;
   display: grid;
   grid-template-rows: auto;
 }
+
 .header {
-    width: 100%;
-    margin-top: 66px;
-    justify-content: space-around;
-  }
-  
-  .cont1 {
-  
-
   width: 100%;
-align-items: center;
-text-align: center;
-display: flex;
-justify-content: space-between;
-padding-left: 24px;
-
-  }
-  
-  .menu {
-    
-    
-  }
-.logo-placeholder {
-    padding-left: 24px;
+  margin-top: 66px;
+  justify-content: space-around;
 }
-  nav img {
-    width: 60px;
-    height: 60px;
-    padding-right: 24px;
-    
-    
-    
-  }
-  
 
-  .logo {
-    padding-left: 24px;
+.cont1 {
+  width: 100%;
+  align-items: center;
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 24px;
+}
 
+.logo-placeholder {
+  padding-left: 24px;
+}
 
-  }
+nav img {
+  width: 60px;
+  height: 60px;
+  padding-right: 24px;
+}
 
-  div a {
-    font-family: "roboto", sans-serif;
-font-weight: 500;
-font-size: 18px;
-line-height: 16px;
-color: rgb(255, 255, 255);
-text-decoration: none;
-  }
+.logo {
+  padding-left: 24px;
+}
+
+div a {
+  font-family: "roboto", sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 16px;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+}
