--- a/main.css
+++ b/main.css
@@ -238,7 +238,7 @@ button:hover {
   border-color: rgb(125, 115, 252);
   justify-content: center;
   width: 100px;
-  margin-left: 30px;
+  margin: auto;
   color: rgb(255, 255, 255);
   font-family: "roboto", sans-serif;
   margin-top: 40px;
