--- a/main.css
+++ b/main.css
@@ -312,6 +312,7 @@ margin-top: -45px;
   flex-direction: column;
   flex-wrap: wrap;
   display: flex;
+  font-family: "roboto", sans-serif;
 }
 
 .input1234 {
@@ -324,6 +325,7 @@ margin-top: -45px;
   flex-direction: column;
   flex-wrap: wrap;
   display: flex;
+  font-family: "roboto", sans-serif;
 }
 
 .input12345 {
@@ -336,7 +338,7 @@ margin-top: -45px;
   flex-direction: column; 
   flex-wrap: wrap;
   display: flex;
-  
+  font-family: "roboto", sans-serif;
    
 }
 
