--- a/main.css
+++ b/main.css
@@ -2,6 +2,13 @@
   width: 100%;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+body {
+  position: relative
+}
+
 .firsttext {
   font-family: "roboto", sans-serif;
   font-size: 35px;
@@ -319,7 +326,8 @@ button:disabled {
 
 .input123 {
   margin-top: 40px;
-  margin-left: 55px;
+  margin-left: 30px;
+  margin-right: 24px;
   width: 327px;
   height: 48px;
   flex-direction: column;
@@ -330,7 +338,8 @@ button:disabled {
 
 .input1234 {
   margin-top: 24px;
-  margin-left: 55px;
+  margin-left: 30px;
+  margin-right: 24px;
   margin-bottom: 24px;
   width: 327px;
   height: 48px;
@@ -342,7 +351,7 @@ button:disabled {
 
 .input12345 {
   margin-top: 24px;
-  margin-left: 55px;
+  margin-left: 30px;
   margin-bottom: 24px;
   width: 327px;
   height: 148px;
