--- a/main.css
+++ b/main.css
@@ -101,7 +101,7 @@ i {
 }
 
 .columnmain {
-  width: 85%;
+  width: 65%;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
@@ -135,20 +135,79 @@ ul {
 }
 
 .icon {
-  justify-content: center;
-  flex-direction: column;
-  flex-wrap: wrap;
-  width: 120%;
+  
+  
+  width: 180%;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  
 }
 
-.styling1 {
-  display: flex;
-  justify-content: center;
-  font-size: 70px;
-  gap: 25px;
+.icon-responsive-y {
+  
+  
+  
+    
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    
+  }
+
+
+.icon-responsive-x{
+  display: none;
 }
+
+.icon-responsive{
+  width: 100%;
+}
+
+.input123_responsive {
+  height: 48px;
+width: 329px;
+
+
+}
+
+.input1234_responsive {
+  height: 48px;
+width: 329px;
+
+
+}
+
+.input1234x_responsive {
+  height: 48px;
+width: 684px;
+
+
+}
+
+.input12345x_responsive {
+  height: 136px;
+width: 684px;
+
+
+}
+
+
+
+
+
+
 
 .styling2 {
+  display: flex;
+  height: 15px;
+  justify-content: center;
+  column-gap: 25px;
+  align-items: center;
+  margin-top: -15px;
+}
+
+.styling3 {
   display: flex;
   height: 15px;
   justify-content: center;
@@ -181,9 +240,10 @@ ul {
   justify-content: center;
   align-items: center;
   width: 80%;
-  height: 236px;
+  
   margin: 0 auto;
   margin-left: 9%;
+  
 
   /* width: 327px; */
 
@@ -223,6 +283,7 @@ ul {
   padding: 12px;
   gap: 10px;
   background-color: rgb(125, 115, 252);
+  border-color: rgb(125,115,252);
   justify-content: space-around;
   width: 100px;
   margin-left: 30px;
@@ -267,18 +328,13 @@ button:disabled {
   flex-wrap: wrap;
 }
 
-.text-footer {
-  font-family: "roboto", sans-serif;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 28px;
-  text-align: center;
-  margin-top: -45px;
-}
 
-.redifining {
+
+
+
+.redifining1 {
   display: flex;
-  flex-flow: column;
+  gap: 25px;
 }
 
 .lastpart {
@@ -299,10 +355,7 @@ button:disabled {
   float: right;
 }
 
-.separator-text {
-  width: 90%;
-  margin: 10% auto;
-}
+
 
 .separator-text1 {
   flex-direction: column;
@@ -325,6 +378,30 @@ button:disabled {
   text-align: center;
 }
 
+
+
+.form-center-responsive {
+  justify-content: center;
+  align-self: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  display: flex;
+  margin: 0 auto;
+  
+  text-align: center;
+  
+}
+
+.input1234_responsive {
+  margin-top: 40px;
+  margin-bottom: 24px;
+  height: 48px;
+  flex-direction: column;
+  flex-wrap: wrap;
+  display: flex;
+  font-family: "roboto", sans-serif;
+}
+
 .input123 {
   margin-top: 40px;
   height: 48px;
@@ -337,7 +414,6 @@ button:disabled {
 .input1234 {
   margin-top: 24px;
   margin-bottom: 24px;
-  width: 327px;
   height: 48px;
   flex-direction: column;
   flex-wrap: wrap;
@@ -348,12 +424,16 @@ button:disabled {
 .input12345 {
   margin-top: 24px;
   margin-bottom: 24px;
-  width: 327px;
   height: 148px;
   flex-direction: column;
   flex-wrap: wrap;
   display: flex;
   font-family: "roboto", sans-serif;
+}
+
+. {
+  width: 90%;
+  margin: 10% auto;
 }
 
 .lasttext {
@@ -380,24 +460,28 @@ button:disabled {
 }
 
 .second {
-  width: 80%;
+  width: 100%;
   display: grid;
   grid-template-rows: auto;
 }
 
-.maintextfooter {
-  font-family: "roboto", sans-serif;
-  font-weight: 500;
-  font-size: 32px;
-  line-height: 44px;
-  color: rgb(147, 144, 255);
-  text-align: center;
-  margin: 40px auto;
+
+
+
+
+
+
+.div-mediaquery-img {
+  margin-right: 10%;
 }
+
+
+
 
 .third {
   display: grid;
   grid-template-rows: auto;
+  
 }
 
 .header {
@@ -430,4 +514,386 @@ div a {
   line-height: 16px;
   color: rgb(255, 255, 255);
   text-decoration: none;
+}
+
+
+/* The next code will be only media query */
+
+@media only screen and (min-width: 768px) {
+  body {
+    background-color: rgb(25, 23, 101);
+  }
+
+  .first{
+    margin-left: 25%;
+    margin-right: 50%;
+    width: 45%;
+  }
+
+  .img_media_query 
+    {
+      display: none;
+    }
+
+    nav {
+      display: flex;
+      flex-direction: row;
+      
+
+    }
+    
+    .respondive-li {
+      margin-right: 20px;
+      justify-content: space-around;
+    }
+    .responsive-ul {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      row-gap: 50px;
+    }
+
+    .myrecentwork {
+      margin-left: 12%;
+    }
+    
+
+  
+.styling1_responsive {
+     display: none;
+    }
+     
+    .styling1_li {
+      display: flex;
+      
+    }
+
+    .separator-text1 {
+      width: 4840px;
+      margin-left: -2%;
+     
+    }
+
+    .paragraph-text1{
+      margin-left: 15%;
+      margin-right: 15%;
+      display: none;
+    }
+    .paragraph-text12{
+      margin-left: 15%;
+      margin-right: 15%;
+    }
+
+    .maintextfooter {
+      font-family: "roboto", sans-serif;
+      font-weight: 500;
+      font-size: 32px;
+      line-height: 44px;
+      color: rgb(147, 144, 255);
+      text-align: center;
+      margin: 40px auto;
+      display: none;
+    }
+
+    
+.maintextfooter1 {
+  font-family: "roboto", sans-serif;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 44px;
+  color: rgb(147, 144, 255);
+  text-align: center;
+  margin: 40px auto;
+}
+
+.footer-icons-flex{
+  display: flex;
+  align-items: center;
+}
+
+.text-footer1 {
+  font-family: "roboto", sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 28px;
+  text-align: center;
+  
+}
+
+.footer-icons-responsive-desktop{
+  display: none;
+}
+
+.styling1 {
+  display: flex;
+  justify-content: center;
+  font-size: 70px;
+  
+  align-items: center;
+  gap: 30px;
+  
+}
+
+.separator-text-important {
+  width: 90%;
+  display: none;
+}
+
+.form-center {
+  justify-content: center;
+  align-self: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  display: flex;
+  margin: 0 auto;
+  width: 90%;
+  text-align: center;
+  display: none;
+}
+
+.separator-text-responsive {
+  width: 2000px;
+  margin: 0 auto;
+}
+
+.separator-text{
+  margin: auto;
+  
+display: none;
+  
+}
+
+.separator-text-responsive1{
+  width: 1300px;
+  }
+
+  .styling1x-responsive {
+    display: flex;
+    justify-content: center;
+    font-size: 70px;
+    justify-content: space-around;
+   
+   
+    gap: 30px;
+    margin-bottom: 90px;
+  }
+  
+  .styling1x-responsive {
+    display: flex;
+    justify-content: center;
+    font-size: 70px;
+    justify-content: space-around;
+   
+   
+    gap: 30px;
+    margin-bottom: 90px;
+  }
+
+  .redifining{
+   display: none;
+}
+
+
+
+.redifining-mediaquery {
+  display: flex;
+  
+ 
+  
+}
+
+.picture-mediaquery {
+  
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 1600px;
+    
+    margin: 0 auto;
+    margin-left: 9%;
+    
+  
+    /* width: 327px; */
+  
+    margin-top: 40px;
+  
+}
+
+.picture-mediaquery1 {
+  
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 2000px;
+  
+  margin: 0 auto;
+  margin-left: 9%;
+  
+
+  /* width: 327px; */
+
+  margin-top: 40px;
+
+}
+
+.div-mediaquery1-version2 {
+  
+  margin-left: 7%;
+}
+
+.disappear-from-desktop{
+  display: none;
+}
+.div-mediaquery {
+  margin-left: 5%;
+}
+
+.div-mediaquery-x{
+  margin-right: 5%;
+}
+
+.div-mediaquery1 {
+  margin-right: 5%;
+  margin-left: 5%;
+  
+}
+}
+
+@media only screen and (max-width: 768px) {
+
+  .responsive-ul{
+    display: none;
+  }
+  .img_media_query_desktop {
+    display: none;
+  }
+  .p_responsive {
+    display: none;
+  }
+
+  .styling1_li {
+    display: none;
+  }
+
+  
+
+  .maintextfooter {
+    font-family: "roboto", sans-serif;
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 44px;
+    color: rgb(147, 144, 255);
+    text-align: center;
+    margin: 40px auto;
+    
+  }
+
+  .paragraph-text12{
+    margin-left: 15%;
+    margin-right: 15%;
+    display: none;
+  }
+  
+.maintextfooter1 {
+  font-family: "roboto", sans-serif;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 44px;
+  color: rgb(147, 144, 255);
+  text-align: center;
+  margin: 40px auto;
+  display: none;
+}
+
+.footer-icons-flex{
+  display: none;
+}
+
+.icon {
+  
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 180%;
+  align-items: center;
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: -15%;
+}
+
+.styling1_responsive {
+  align-items: center;
+  flex-direction: column;
+    flex-wrap: wrap;
+    
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: -15%;
+ }
+
+ .styling1-responsive {
+  display: flex;
+  justify-content: center;
+  font-size: 70px;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: -70%;
+  
+}
+
+
+
+
+
+.styling1 {
+  display: flex;
+  justify-content: center;
+  font-size: 70px;
+  justify-content: space-around;
+  align-items: center;
+  
+}
+
+.separator-text{
+  margin: auto;
+  
+
+  
+}
+
+.separator-text-important{
+  width: 2000px;
+    
+}
+
+
+
+.form-center-responsive {
+  justify-content: center;
+  align-self: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  display: flex;
+  margin: 0 auto;
+  width: 90%;
+  text-align: center;
+  display: none;
+}
+
+.separator-text-responsive {
+  display: none;
+}
+
+.separator-text-responsive1{
+display: none;
+}
+
+.redifining-mediaquery {
+  display: flex;
+ display: none;
+  
+}
+
+
 }
